updated readme, improved implementation.

--- a/test-site/about.html
+++ b/test-site/about.html
@@ -13,6 +13,29 @@
     <p>
         This is a page with information about this testing website.
     </p>
+    <p style="max-width: 50ch;">
+
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum aliquam justo in sagittis dapibus. Nunc volutpat dolor quis velit interdum tempor. Mauris ac tortor accumsan, tristique sapien ac, scelerisque risus. Aliquam molestie finibus urna ornare tincidunt. Sed a eleifend ipsum. Proin nulla magna, semper iaculis velit ut, consequat laoreet magna. Vivamus id metus nec purus facilisis rutrum. Suspendisse potenti. Phasellus rhoncus nec ipsum et efficitur. Pellentesque condimentum egestas justo gravida imperdiet. Ut eu rhoncus urna. Nam sit amet tellus ut ex ultrices faucibus. Cras mi tellus, tempus quis ullamcorper sed, luctus vel purus. Proin porta ligula a turpis venenatis viverra. Vivamus id sollicitudin metus, quis ornare mi.
+
+Mauris lobortis orci vitae accumsan placerat. Fusce blandit porttitor mattis. Integer mauris purus, dignissim et metus tincidunt, varius laoreet massa. Nunc consequat facilisis urna eget fermentum. Pellentesque faucibus fermentum faucibus. In facilisis lacus vitae eros accumsan commodo. Suspendisse pharetra sem ut lorem malesuada egestas. Duis sollicitudin ornare efficitur. Proin in urna volutpat, porta est scelerisque, euismod libero. Ut dignissim turpis at eros scelerisque ultrices. Curabitur hendrerit enim et odio lobortis, at elementum risus varius.
+
+Donec luctus ornare leo. Praesent dapibus porta ipsum sed auctor. Suspendisse a efficitur sapien, nec finibus nibh. Donec fringilla mollis lacinia. In eu sapien eu arcu euismod ultricies. In hac habitasse platea dictumst. Donec eget tellus facilisis, molestie elit sit amet, convallis turpis. Suspendisse non aliquet turpis.
+
+Mauris nisi nibh, finibus ac laoreet efficitur, dapibus ac mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus quis consectetur erat, in vulputate leo. Etiam consequat consequat velit. Nam finibus tellus eget lorem gravida condimentum. Quisque porttitor ac odio ac egestas. Sed quis risus massa. Duis placerat laoreet risus, nec sodales odio malesuada id. Integer a tincidunt turpis.
+
+Mauris ac elementum quam. In vestibulum ante ac quam consequat varius. Quisque tortor lectus, lacinia interdum nisl vitae, feugiat aliquet nisi. Duis eget aliquet massa, eget faucibus mi. Suspendisse cursus ultrices augue varius vulputate. Sed in ligula eget nulla cursus vehicula. Proin condimentum varius felis non rutrum. Nullam dictum sed massa ac viverra. Quisque at tortor sed mi pretium viverra. Sed ac fermentum arcu. Ut laoreet libero ut mauris rutrum porta. Phasellus est massa, ultricies sed ultrices ut, lacinia at neque.
+
+In suscipit mauris vel tellus accumsan, vitae hendrerit arcu bibendum. Aenean eu sodales dolor. Nullam nec risus urna. Fusce congue erat id tellus hendrerit, non bibendum neque molestie. Vestibulum quis velit vitae odio iaculis tincidunt a id ligula. Cras at lectus nec justo volutpat hendrerit. Nullam volutpat dolor vitae magna molestie, vel egestas elit fermentum. Pellentesque fermentum commodo massa, sit amet hendrerit orci consequat at. Nulla facilisi. Nullam ultrices cursus accumsan. Proin sit amet cursus odio, eu hendrerit justo. Donec ultrices bibendum ante. Donec nunc ipsum, cursus et tempor vel, malesuada at diam. Duis varius aliquet tristique. Donec non rutrum lorem, vitae molestie magna. Proin vulputate leo est, molestie pharetra enim aliquam eu.
+
+Ut quis consequat augue. Curabitur tempus fermentum viverra. Fusce non ligula sit amet augue gravida viverra nec id nisl. Maecenas quis luctus orci. Cras blandit ut neque sit amet vehicula. Ut tempus luctus felis quis sodales. Pellentesque luctus elit porttitor, molestie nulla in, sollicitudin mauris. Nullam accumsan mauris nec dui vehicula aliquam. Suspendisse potenti. Sed eu auctor orci, non sagittis dui. Quisque nec eleifend ex. In ut dui ac ipsum tincidunt pharetra. Quisque commodo lorem libero, mattis interdum risus sodales ac. Vestibulum blandit interdum eros, id ornare lacus. Sed id justo tristique, mollis risus sit amet, hendrerit magna.
+
+Phasellus placerat porttitor nisi id convallis. Mauris vitae odio neque. Proin accumsan magna felis, et convallis odio elementum eu. Morbi non condimentum leo, nec lobortis arcu. Donec vitae scelerisque orci. Aenean erat urna, maximus sit amet libero et, tempus scelerisque ipsum. Cras in blandit leo, ut aliquam massa. Duis a leo cursus, pharetra arcu at, accumsan nisi. Proin laoreet iaculis tortor, efficitur ullamcorper quam sollicitudin quis. Nulla facilisi. Vestibulum non rutrum eros.
+
+Proin justo ante, ornare mattis nisi in, venenatis iaculis ipsum. Pellentesque vitae rhoncus nunc. Donec quis velit justo. Praesent sit amet egestas metus. Donec laoreet ligula id diam imperdiet iaculis. Nulla facilisi. Suspendisse potenti. Donec sed tincidunt velit. Donec convallis consequat dolor quis pellentesque. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+
+Integer ac metus urna. Sed nec posuere nulla, nec vehicula sapien. Fusce sed sollicitudin felis, ac bibendum diam. Cras venenatis dictum lectus nec pulvinar. Suspendisse ultricies, justo et hendrerit malesuada, elit tortor bibendum dolor, mattis sagittis mauris ipsum a odio. Aenean vestibulum tortor gravida, dictum ante ut, interdum turpis. Ut sit amet sem non lacus eleifend vehicula et eget nunc. Morbi quam nunc, commodo ut laoreet eget, tristique sed ligula. In gravida dapibus est et congue. Morbi cursus augue non urna ultricies, nec dictum lacus ultricies. Donec leo ipsum, eleifend in egestas eu, tristique a mi. Nullam sed commodo orci, id aliquam libero. Fusce ultricies magna est, nec interdum eros accumsan a. 
+    </p>
 </body>
 
 </html>
